--- a/bot.yml
+++ b/bot.yml
@@ -1,4 +1,5 @@
 name: RaBot
 description: A utility bot
 avatar: .beepboop/avatar.jpg
+email: rabot@anze.xyz
 # To learn everything supported in the bot.yml file, visit https://beepboophq.com/docs/article/bot-yml
